# seafile

./: configure.ac
app/: Makefile.am  seaf-cli  seaf-cli2
daemon/: Makefile.am  http-tx-mgr.c  repo-mgr.c  seaf-daemon.c  seafile-config.c  seafile-config.h  seafile-session.c  seafile-session.h  seafile_service.c  seafile_service.h  seafile_service_main.c  seafile_service_main.h  sync-mgr.c
idl/: seafile.thrift
